# cydora-backend

./: README.md  hardhat.config.ts
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/v1/endpoints/: events.py
backend/app/core/: config.py  security.py
backend/app/services/: blockchain.py  ipfs.py  redis_cache.py
contracts/: AdEventLogger.sol
